Fix checkboxes not showing in webkit browsers

--- a/cpucoolerchart/static/main.css.less
+++ b/cpucoolerchart/static/main.css.less
@@ -10,7 +10,8 @@ body {
 
 h1, .h1 { font-size: floor(@font-size-base * 1.80); }
 
-input {
+input[type="text"],
+input[type="number"] {
   -webkit-appearance: none;
 }
 
